--- a/style.css
+++ b/style.css
@@ -7,12 +7,16 @@ SemiBold 600
 ExtraBold800
 */
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     font-family: "Montserrat", sans-serif;
     color: #D9D9D9;
     font-size: 20px;
-    line-height: 163px;
+    line-height: 30px;
     letter-spacing: -0.02px;
     background-color: #121517;
 }
@@ -20,3 +24,15 @@ body {
 h1, h2 {
     font-weight: 800;
 }
+
+a {
+    color: #DEDEDE;
+    text-decoration: none;
+}
+
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
