--- a/benefist.css
+++ b/benefist.css
@@ -30,26 +30,32 @@
 }
 
 .benefits__container::after{
-    content: "we\Ahave";
+    content: "We\Ahave";
+    white-space: pre-wrap;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 15px;
+    left: 15px;
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 10;
-    height: 180px;
-    width: 180px;
+    height: 200px;
+    width: 200px;
     font-weight: 500;
+    flex-direction: column;
     font-size: 32px;
     text-transform: uppercase;
     text-align: center;
     color: #fff;
-    background-image: url("./images/icons/star.svg");
+    transform: translate(-50%, -50%);
+    background-image: url("./images/icons/star2.svg");
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
 
 }
+
+
 
 .benefits__item {
     max-width: 220px;
