--- a/products.css
+++ b/products.css
@@ -2,48 +2,6 @@
     margin-top: 100px;
 }
 
-.products .container {
-}
-
-.products__text {
-    display: flex;
-    align-items: center;
-    gap: 70px;
-    margin-bottom: 60px;
-}
-
-.products__title {
-    width: 400px;
-    position: relative;
-}
-
-.products__title::before {
-    content: "";
-    position: absolute;
-    right: 60px;
-    top: 20px;
-    z-index: -5;
-    width: 140px;
-    height: 140px;
-    border-radius: 100%;
-    background: linear-gradient(245deg, rgba(35, 114, 73, 0.55) 0%, rgba(53, 198, 107, 0.73) 51.85%);
-    filter: blur(90px);
-}
-
-.card:hover::before {
-    background: linear-gradient(260deg, rgba(35, 114, 73, 1) 0%, rgba(53, 198, 107, 1) 100%);
-}
-
-.products__title {
-}
-
-.text-gradient {
-}
-
-.products__desc {
-    width: 450px;
-}
-
 .products__cards {
     display: flex;
     gap: 30px;
@@ -57,6 +15,7 @@
     text-align: center;
     background-color: #121517;
     border-radius: 30px;
+    margin-top: 30px;
 }
 
 .card:hover .card__img {
@@ -97,7 +56,7 @@
     width: 180px;
     filter: 0 4px 46px 0 rgba(0, 0, 0, 0.48);
     transition: transform 0.5s;
-} 
+}
 
 .card__title {
     font-weight: 500;
