--- a/contacts.css
+++ b/contacts.css
@@ -1,5 +1,7 @@
 .contacts {
-    margin-top: 100px;
+    padding-top: 130px;
+    overflow: hidden;
+    padding-bottom: 100px;
 }
 
 .contacts .container {
@@ -11,42 +13,80 @@
     width: 390px;
 }
 
-.title {
-}
-
-.contacts__img {
-    width: 350px;
-    clip-path: polygon(30% 0, 100% 0, 100% 100%, 0 100%, 0 26%);
+.contacts__title {
+    margin-bottom: 50px;
 }
 
 .contacts__desc {
     margin-bottom: 50px;
+    position: relative;
 }
 
-.text-gradient {
+.contacts__desc::before {
+    content: "";
+    position: absolute;
+    left: 80px;
+    top: 20px;
+    z-index: -5;
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    background: linear-gradient(245deg, rgba(35, 114, 73, 0.55) 0%, rgba(53, 198, 107, 0.73) 51.85%);
+    filter: blur(90px);
 }
 
 .contacts__phone {
     display: flex;
-    gap: 20px;
     align-items: center;
+    gap: 20px;
     font-weight: 500;
     font-size: 32px;
-    color: #fff;
+    color: #ffffff;
 }
 
 .contacts__phone::before {
     content: "";
     width: 45px;
     height: 45px;
-    background-image: url("./images/icons/phone.png");
+    background-image: url("/images/icons/phone.png");
     background-size: contain;
     background-position: center;
 }
 
 .contacts__img-wrapper {
     position: relative;
-    padding-right: 35px;
+}
+
+.contacts__img-wrapper::before {
+    content: "";
+    position: absolute;
+    left: -50px;
+    top: 30px;
+    z-index: -5;
+    width: 120px;
+    height: 120px;
+    border-radius: 100%;
+    background: linear-gradient(245deg, rgba(35, 114, 73, 0.55) 0%, rgba(53, 198, 107, 0.73) 51.85%);
+    filter: blur(90px);
+}
+
+.contacts__img-wrapper::after {
+    content: "";
+    width: 920px;
+    height: 670px;
+    position: absolute;
+    right: -245px;
+    bottom: -360px;
+    z-index: -15;
+    background-image: url("./images/icons/lines.svg");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    transform: rotate(20deg);
+}
+
+.contacts__img-inner-wrapper {
+    position: relative;
 }
 
 .contacts__img-inner-wrapper::before {
@@ -61,9 +101,34 @@
     clip-path: polygon(30% 0, 100% 0, 100% 100%, 0 100%, 0 26%);
 }
 
-.contacts__img-inner-wrapper {
-}
+.contacts__img-inner-wrapper::after {
+    content: "we\Ahave";
+    white-space: pre-wrap;
 
+    position: absolute;
+    top: 55px;
+    left: 30px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 250px;
+    height: 250px;
+    z-index: 20;
+
+    font-weight: 500;
+    font-size: 38px;
+    text-transform: uppercase;
+    text-align: center;
+    color: #ffffff;
+    transform: translate(-50%, -50%);
+
+    background-image: url("/images/icons/star2.svg");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
 .contacts__img {
     width: 350px;
 }
