--- a/products.css
+++ b/products.css
@@ -4,8 +4,9 @@
 
 .products__cards {
     display: flex;
-    gap: 30px;
-    justify-content: space-between;
+    gap: 50px;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .card {
