finished media for tablet

--- a/media.css
+++ b/media.css
@@ -18,3 +18,109 @@
                              "kitchen kitchen";
     }
 }
+
+@media (max-width: 1000px) {
+    .footer__nav {
+        gap: 40px;
+    }
+
+    .welcome__img {
+        width: 250px;
+    }
+
+    .welcome .container {
+        flex-direction: column-reverse;
+        gap: 30px;
+    }
+
+    .welcome__img-wrapper::before {
+        width: 550px;
+        height: 550px;
+        position: absolute;
+        right: -150px;
+        bottom: -150px;
+    }
+
+    .history .container {
+        flex-direction: column;
+        align-items: center;
+        gap: 60px;
+    }
+
+    .history__img {
+        width: 450px;
+        height: 400px;
+        object-fit: cover;
+    }
+
+    .history__text::before {
+        right: -255px;
+    }
+
+    .text-row {
+        flex-direction: column;
+        gap: 30px;
+        text-align: center;
+    }
+
+    .text-row .text-row--reverse {
+        flex-direction: column;
+    }
+
+    .text-row__title::before {
+        right: auto;
+        left: 50px;
+    }
+}
+
+@media (max-width: 850px){
+    .contacts {
+        text-align: center;
+    }
+
+    .contacts .container {
+        flex-direction: column-reverse;
+        align-items: center;
+        gap: 50px;
+    }
+
+    .contacts__img {
+        width: 450px;
+        height: 340px;
+        object-fit: cover;
+    }
+
+    .contacts__img-inner-wrapper::after {
+        left: auto;
+        right: -200px;
+        top: 0;
+    }
+
+    .contacts__img-wrapper:after {
+        transform: rotate(33deg);
+        bottom: -240px;
+    }
+
+    .footer__row {
+        flex-wrap: wrap;
+        align-items: center;
+        row-gap: 40px;
+        margin-bottom: 40px;
+    }
+
+    .footer__nav {
+        width: 100%;
+        order: 1;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+
+    .footer__nav-col {
+        width:calc(50% - 15px);
+    }
+
+    .events__inner-wrapper::before{
+        content: none;
+    }
+
+}
