--- a/media.css
+++ b/media.css
@@ -73,7 +73,7 @@
     }
 }
 
-@media (max-width: 850px){
+@media (max-width: 850px) {
     .contacts {
         text-align: center;
     }
@@ -116,11 +116,272 @@
     }
 
     .footer__nav-col {
-        width:calc(50% - 15px);
+        width: calc(50% - 15px);
     }
 
-    .events__inner-wrapper::before{
+    .events__inner-wrapper::before {
         content: none;
+    }
+
+}
+
+@media (max-width: 740px) {
+
+    body {
+        font-size: 14px;
+    }
+
+    .header {
+        padding: 35px 0;
+    }
+
+    .header__logo {
+        font-size: 22px;
+    }
+
+    .header .container {
+        gap: 30px;
+        justify-content: space-between;
+    }
+
+    .header__link + .header__link {
+        margin-left: 30px;
+    }
+
+    .welcome {
+        margin-top: 10px;
+    }
+
+    .welcome__img {
+        width: 250px;
+    }
+
+    .welcome__img-wrapper::before {
+        width: 420px;
+        /*height: 420px;*/
+        right: -100px;
+        /*left: -100px;*/
+    }
+
+    .title {
+        font-size: 48px;
+    }
+
+    .welcome__title {
+        max-width: 350px;
+        margin-bottom: 35px;
+    }
+
+    .welcome__text {
+        margin-bottom: 35px;
+    }
+
+    .btn {
+        font-size: 16px;
+        padding: 15px 50px;
+        border-right: 55px;
+    }
+
+    .link {
+        font-size: 16px;
+        padding: 15px 35px;
+        border-right: 55px;
+    }
+
+    .welcome__btns-wrapper {
+        margin-bottom: 35px;
+        gap: 10px;
+    }
+
+    .welcome__title::before {
+        left: 140px;
+        top: 30px;
+        height: 80px;
+        width: 80px;
+        filter: blur(50px);
+    }
+
+    .welcome__img-wrapper::after {
+        right: 340px;
+        bottom: 340px;
+        width: 14px;
+        height: 14px;
+        filter: blur(60px);
+    }
+
+    .stats {
+        gap: 30px;
+    }
+
+    .stats__item {
+        width: 85px;
+    }
+
+    .stats__num {
+        font-size: 40px;
+    }
+
+    .benefits {
+        margin-top: 65px;
+    }
+
+    .benefits__container {
+        flex-direction: column;
+        align-items: center;
+        gap: 25px;
+        max-width: 220px;
+        padding: 20px;
+        border-radius: 25px;
+    }
+
+
+    .benefits__icons {
+        width: 85px;
+    }
+
+    .benefits__image-wrapper::before {
+        width: 87px;
+        height: 87px;
+    }
+
+    .benefits__heard {
+        top: calc(50% + 3px);
+        left: calc(50% + 3px);
+    }
+
+    .benefits__rocket {
+        width: 125px;
+    }
+
+    .benefits__money {
+        width: 120px;
+    }
+
+    .benefits__title {
+        font-size: 18px;
+        margin-bottom: 5px;
+    }
+
+    .benefits__image-wrapper {
+        margin-bottom: 15px;
+    }
+
+    .benefits__item {
+        /*margin-bottom: 25px;*/
+        max-width: 140px;
+    }
+
+    .benefits__container::after {
+        width: 120px;
+        height: 120px;
+        font-size: 18px;
+        left: 10px;
+    }
+
+    .benefits__container::before {
+        left: auto;
+        right: -10px;
+        top: -10px;
+        width: 100px;
+        height: 100px;
+        filter: blur(40px);
+    }
+
+    .history {
+        margin-top: 60px;
+        padding-bottom: 0;
+    }
+
+    .history__img {
+        width: 340px;
+        height: 270px;
+    }
+
+    .history__img-wrapper::before {
+        top: 15px;
+    }
+
+    .history .container {
+        gap: 40px;
+    }
+
+    .history__title {
+        margin-bottom: 35px;
+    }
+
+    .history__desc {
+        margin-bottom: 35px;
+    }
+
+    .products {
+        margin-top: 65px;
+    }
+
+    /*.card {*/
+    /*    width: 185px;*/
+    /*}*/
+
+    /*.card__img {*/
+    /*    width: 115px;*/
+    /*    left: 5px;*/
+    /*}*/
+
+    /*.card__img-wrapper {*/
+    /*    margin-bottom: 10px;*/
+    /*}*/
+
+    /*.card__img-wrapper::before {*/
+    /*    width: 120px;*/
+    /*    height: 120px;*/
+    /*}*/
+
+    /*.card__title {*/
+    /*    font-size: 22px;*/
+    /*}*/
+
+    /*.card__size {*/
+    /*    font-size: 22px;*/
+    /*}*/
+
+    /*.card__btn {*/
+    /*    font-size: 14px;*/
+    /*    padding: 10px 0;*/
+    /*}*/
+
+    /*.card__row {*/
+    /*    margin-bottom: 15px;*/
+    /*}*/
+
+    .events {
+        margin-top: 85px;
+    }
+
+    .text-row {
+        margin-bottom: 40px;
+    }
+
+    .event__title {
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 18px;
+        max-width: 160px;
+        margin-bottom: 25px;
+    }
+
+    .event__btn {
+        font-size: 14px;
+        padding: 10px 30px;
+    }
+
+    .event {
+        padding: 20px 5px;
+        text-align: center;
+    }
+
+    .events__inner-wrapper {
+       grid-auto-rows: auto;
+        grid-template-columns: 1fr 1fr;
+        gap: 15px 25px;
     }
 
 }
