--- a/events.css
+++ b/events.css
@@ -64,26 +64,26 @@
 }
 
 .event--price {
-    background-image: url("/images/events/1.png");
+    background-image: url("./images/events/1.png");
     grid-area: price;
 }
 
 .event--kitchen {
-    background-image: url("/images/events/2.png");
+    background-image: url("./images/events/2.png");
     grid-area: kitchen;
 }
 
 .event--free {
-    background-image: url("/images/events/3.png");
+    background-image: url("./images/events/3.png");
     grid-area: free;
 }
 
 .event--social {
-    background-image: url("/images/events/4.png");
+    background-image: url("./images/events/4.png");
     grid-area: social;
 }
 
 .event--choose {
-    background-image: url("/images/events/5.png");
+    background-image: url("./images/events/5.png");
     grid-area: choose;
 }
